web-infras/parser/tests/fixtures/esprima/ES6/identifier/invalid_var_await/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,12)
1|export var await;
 |          ^
